--- a/css/12bool.css
+++ b/css/12bool.css
@@ -1,12 +1,12 @@
-.debug .container {
-  height: 300px;
+.debug .row {
+  min-height: 300px;
   border: 1px solid;
+  background-color: pink;
 }
 
-.debug .container [class*="col-"] {
-  height: 300px;
+.debug .row [class*="col-"] {
+  min-height: 300px;
   border: 1px solid black;
-  background-color: pink;
 }
 
 .col-1 {
@@ -27,12 +27,4 @@
 
 .col-6 {
   width: calc(( 100% / 12 ) * 6);
-}
-
-.col-4 {
-  width: calc(( 100% / 12 ) * 4);
-}
-
-.col-3 {
-  width: calc(( 100% / 12 ) * 3);
 }
