--- a/css/style.css
+++ b/css/style.css
@@ -5,31 +5,30 @@
   box-sizing: border-box;
 }
 
-.container {
-  max-width: 1170px;
+.debug {
+  margin: 0 auto;
+  width: 85%;
+}
+
+.row {
+  width: 100%;
   margin: 0 auto;
 }
-.container::after {
+.row::after {
   content: "";
   display: table;
   clear: both;
 }
 
 [class*="col-"] {
+  text-align: center;
   float: left;
 }
 
-div>.col-1,
-div> .col-12,
-div> .col-8,
-div> .col-2,
-div> .col-6,
-div> .col-4,
-div> .col-3 {
-  padding: 150px 0;
-  text-align: center;
+.padding {
+  padding: 5px;
 }
 
-#ftr {
-background-color: #dd143787;
+div .nested {
+  background-color: #be5164ba;
 }
