--- a/css/style.css
+++ b/css/style.css
@@ -25,10 +25,32 @@
   float: left;
 }
 
+.top120 {
+  text-align-last: center;
+  margin: auto;
+  padding-top: 120px;
+}
+
+.middle140 {
+  text-align-last: center;
+  margin: auto;
+  width: 50%;
+  padding: 140px;
+}
+
+.middle-140 {
+  padding-top: 140px;
+}
+
 .padding {
   padding: 5px;
 }
 
 div .nested {
   background-color: #be5164ba;
+}
+
+#white {
+  border-style: solid;
+  border-color: white;
 }
