--- a/css/style.css
+++ b/css/style.css
@@ -54,3 +54,18 @@ div .nested {
   border-style: solid;
   border-color: white;
 }
+
+@media screen and (min-width: 992px){
+  .col-lg-1 {
+    width: calc(( 100% / 12 ) * 1);
+}
+
+@media screen and (min-width:768px)(max-width: 992px){
+  .col-md-1 {
+    width: calc(( 100% / 12 ) * 1);
+}
+
+@media screen and (max-width:767px){
+  .col-xs-1 {
+    width: calc(( 100% / 12 ) * 1);
+}
